stylesheet.css
body {
    background-color: #1A1A1D;
    margin: 0;
}

.column {
    height: 85vh;
    min-width: 50vh;
}

.container-title {
    max-width: min(90vh,75vw);
    padding-top: 5%;
    margin: auto;
    font-size: min(4vw,4vh);
    font-weight: bold;
}

.column-text {
    column-count: 2;
    column-width: 390px;

    max-width: min(90vh,75vw);
    padding-top: 2%;
    padding-bottom: 5%;
    margin: auto;
    font-size: min(3vw,3vh);
}

.center {
    position: absolute;
    display: inline-flex;
    top:  50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.overlay {
    z-index: 1;
    width:  100%;
    height: 100vh;
    position: fixed;
}

.side-left {
    position: absolute;
    width: min(10vw,10vh);
    height: 100%;
}

.side-right {
    position: absolute;
    display: inline-block;
    right: 0;
    width: min(10vw,10vh);
    height: 100%;
}

.side-container {
    width: 100%;
    display: inline-block;
}

.side-container img {
    margin: min(1.5vw,1.5vh);
    width: 90%;
    height: 90%;
}

.side-container p {
    writing-mode: vertical-rl;
    text-orientation: mixed;
    margin: auto;

    font-size: min(2.5vw,2.5vh);
    font-weight: bold;
    font-family: 'Roboto', sans-serif;
    color: white;
}

.card {
    box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
}

.content {
    margin: auto;
    display: grid;
    width:  100%;
}

.container {
    background-color: black;
    width: 100%;
    margin: 0;
    padding: 0;
    position: relative;
}

.container img {
    margin: 0;
    width: 100%;
    height: 100%;
}

